--- a/R/p1_3_GAP_Tuning_07_02_2017.Rmd
+++ b/R/p1_3_GAP_Tuning_07_02_2017.Rmd
@@ -132,18 +132,16 @@ svmControl <- trainControl(method="repeatedcv", number=10, repeats=3,search="ran
 svmGrid <-  expand.grid(degree = 3, scale = c(4^(-5:2)),C = c(4^(-2:5)))
 
 #Set seed and run model
+set.seed(seed)
 svmPolyFit <- train(Phenotype ~ ., data = expressionRFE, method = "svmPoly", metric = metric, trControl = svmControl, verbose = FALSE, preProc = c("center", "scale"), tuneGrid = svmGrid )
 svmPolyFit
 
 
-#Grid search broad search
-trellis.par.set(caretTheme())
-
-
 #tuning grid SVMpoly second round informed by Grid search
-svmGrid <-  expand.grid(degree = 3, scale = c(2^(-10:-4)),C = c(2^(-3:6)))
+svmGrid <-  expand.grid(degree = 3, scale = c((1:10)/1000),C = c(2^(-5:1),3,4))
 
 #Set seed and run model
+set.seed(seed)
 svmPolyFit2 <- train(Phenotype ~ ., data = expressionRFE, method = "svmPoly", metric = metric, trControl = svmControl, verbose = FALSE, preProc = c("center", "scale"), tuneGrid = svmGrid )
 class(svmPolyFit2)
 
