--- a/R/p1_3_GAP_Tuning_07_02_2017.Rmd
+++ b/R/p1_3_GAP_Tuning_07_02_2017.Rmd
@@ -146,6 +146,7 @@ gbmFit
 
 #tuning grid SVMpoly
 svmControl <- trainControl(method="repeatedcv", number=10, repeats=3,search="random", sampling="down", savePredictions="all")
+svmControl <- trainControl(method="repeatedcv", number=10, repeats=3, sampling="down", savePredictions="all")
 svmGrid <-  expand.grid(degree = 3, scale = c(4^(-5:2)),C = c(4^(-2:5)))
 
 #Set seed and run model
@@ -161,6 +162,8 @@ svmGrid <-  expand.grid(degree = 3, scale = c((1:10)/1000),C = c(2^(-5:1),3,4))
 set.seed(seed)
 svmPolyFit2 <- train(Phenotype ~ ., data = expressionRFE, method = "svmPoly", metric = metric, trControl = svmControl, verbose = FALSE, preProc = c("center", "scale"), tuneGrid = svmGrid )
 svmPolyFit2
+set.seed(seed)
+svmPolyFit3 <- train(Phenotype ~ ., data = expressionRFE, method = "svmPoly", metric = metric, trControl = svmControl, verbose = FALSE, preProc = c("center", "scale"), tuneGrid = svmGrid )
 
 
 
@@ -248,9 +251,10 @@ simplePoly<-as.numeric(svmPolyFit2$results[simple_model_fun(ml_model=svmPolyFit2
 #####   Define Grid searches. Etc. 
 fcontrol <- trainControl(method="repeatedcv", number=10, repeats=3, sampling="down", savePredictions="all")
 
+
 rftGrid <- expand.grid(.mtry=simpleRF[1])
 gbmGrid <- expand.grid(shrinkage = simpleGBM[1],interaction.depth = simpleGBM[2],n.minobsinnode = simpleGBM[3], n.trees = simpleGBM[4])
-svmGrid2 <-  expand.grid(degree = simplePoly[1], scale = simplePoly[2],C = simplePoly[3])
+svmGrid <-  expand.grid(degree = simplePoly[1], scale = simplePoly[2],C = simplePoly[3])
 
 
 
@@ -263,43 +267,29 @@ gbm_final <- train(Phenotype ~ ., data = expressionRFE, method = "gbm", metric =
 set.seed(seed)
 svmPoly_final <- train(Phenotype ~ ., data = expressionRFE, method = "svmPoly", metric = metric, trControl = fcontrol, verbose = FALSE, preProc = c("center", "scale"), tuneGrid = svmGrid)
 
-
+varimp100fold<-varImp(RF_final)
+varimp30fold
 ```
 
 
 #Resample of top performers and top low complexity performers. 
 ```{r complexity vs accuracy}
-
+High_Low_complexity_model_list<-list(RF = RF_search, RF_simple=RF_final, GBM = gbmFit, GBM_simple = gbm_final, svmPoly = svmPolyFit2, svmPoly_simple = svmPoly_final)
 
 #Summary and Plot. 
-ml_resample<-resamples(list(RF = RF_search,
-                          RF_simple=RF_final,
-                          GBM = gbmFit,
-                          GBM_simple = gbm_final,
-                          svmPoly = svmPolyFit2,
-                          svmPoly_simple = svmPoly_final))
-
-ml_resample<-resamples(list(RF = RF_search,
-                          RF_simple=RF_final,
-                          GBM = gbmFit,
-                          GBM_simple = gbm_final,
-                          svmPoly = svmPolyFit2,
-                          svmPoly_simple = svmPoly_final))
-
+ml_resample<-resamples(High_Low_complexity_model_list)
 resamps=ml_resample
 
 ```
 
 #Compare best models
 ```{r Compare}
-resamps <- resamples(list(GBM = gbmFit,
-                          RF = RF_search,
-                          svmPoly = svmPolyFit2))
 str(resamps)
-
-
+#define names of models for plot
+Model_names<-c("RF_Complex","RF_Simple","GBM_Complex","GBM_Simple","svmPoly_Complex","svmPoly_Simple")
 #plot comparing models
 Accuracy_results<-resamps$values[,grep("*Accuracy",colnames(resamps$values))]
+colnames(Accuracy_results)<-Model_names
 accuracy_plot<-Accuracy_results[,row.names(as.matrix(sort(sapply(Accuracy_results,mean),decreasing = F)))]
 accuracy_plot$Datasets<-c("RFE(GAP)")
 accuracy_plot2<-melt(accuracy_plot, id="Datasets")
@@ -307,43 +297,33 @@ colnames(accuracy_plot2)<-c("GeneLists","Algorithm","Accuracy")
 
 accuracy_plot2
 
-table(accuracy_plot2[,3])
-
+title_final_models<-"Comparision of High and Low Complexity Models"
 ggplot(accuracy_plot2,
        aes(x=Algorithm,y=Accuracy, colour = Algorithm)) +
   geom_point() + 
   geom_boxplot()+
   geom_jitter()+
   coord_flip()+
-  ggtitle("Accuracy of 10x10-fold cross validation for 11 Models")
+  ggtitle(title_final_models)
+ggsave(paste(P1_figs_dir,"p1_3_Hi_Lo_complexity_model_comparision_.png",sep=""))
 
-
-summary(resamps)
-trellis.par.set(theme1)
-bwplot(resamps, layout = c(2, 1))
-
-trellis.par.set(caretTheme())
-dotplot(resamps, metric = "Accuracy")
-trellis.par.set(theme1)
-xyplot(resamps, what = "BlandAltman")
-splom(resamps)
-
-difValues <- diff(resamps)
-difValues
-summary(difValues)
-
-trellis.par.set(caretTheme())
-bwplot(difValues, layout = c(2, 1))
-
-trellis.par.set(caretTheme())
-dotplot(difValues)
-
-ggplot(difValues)
 
 ```
 
 #Save all models for reference
 ```{r save}
+
+
+#Save Models
+save(High_Low_complexity_model_list, file=paste(P1_output_dir,"P1_3_High_Low_complexity_model_list.rdata",sep=""), compress = T)
+
+```
+
+
+
+#Validation
+```{r Validation}
+
 
 ```
 
