--- a/R/p1_3_GAP_Tuning_07_02_2017.Rmd
+++ b/R/p1_3_GAP_Tuning_07_02_2017.Rmd
@@ -325,5 +325,15 @@ save(High_Low_complexity_model_list, file=paste(P1_output_dir,"P1_3_High_Low_com
 ```{r Validation}
 
 
+predict_fit<-predict(gbm_final, newdata = testing_df)
+confusionMatrix(predict_fit, testing_df$Phenotype)
+
+predict_fit<-predict(RF_final, newdata = testing_df)
+confusionMatrix(predict_fit, testing_df$Phenotype)
+
+predict_fit<-predict(svmPoly_final, newdata = testing_df)
+confusionMatrix(predict_fit, testing_df$Phenotype)
+
+
 ```
 
